<?xml version="1.0"?>
<package format="3">
  <name>ax12_hardware</name>
  <version>0.0.1</version>
  <description>AX-12A JointState publisher</description>
  <maintainer email="ksg32719917@gmail.com">ksg32719</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
