<?xml version="1.0"?>
<package format="3">
  <name>decision_core</name>
  <version>0.0.1</version>
  <description>Rule-based decision core</description>

  <maintainer email="ksg32719917@gmail.com">seongikim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>decision_interfaces</depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>yaml-cpp</exec_depend>
</package>

